@@ -75,7 +75,7 @@ class DB_MySQL {
     /* establish connection, select database */
     if ( 0 == $this->Link_ID ) {
         $method = ( defined('AA_USE_NON_PERSISTENT_CONNECT') AND AA_USE_NON_PERSISTENT_CONNECT ) ? 'mysql_connect' : 'mysql_pconnect';
-        $this->Link_ID = @$method($Host, $User, $Password);
+        $this->Link_ID = $method($Host, $User, $Password);
 
       if (!$this->Link_ID) {
         $this->connect_failed("connect ($Host, $User, \$Password) failed");
@@ -84,14 +84,17 @@ class DB_MySQL {
 
         // Jirkare hack
         if ( defined('DB_CHARACTER_SET') ) {
-            @mysql_query('SET CHARACTER SET '. DB_CHARACTER_SET, $this->Link_ID);
+            mysql_query('SET CHARACTER SET '. DB_CHARACTER_SET, $this->Link_ID);
         }
         if ( defined('DB_COLLATION_CONNECTION') ) {
-            @mysql_query('SET COLLATION_CONNECTION=\''. DB_COLLATION_CONNECTION.'\'', $this->Link_ID);
+            mysql_query('SET COLLATION_CONNECTION=\''. DB_COLLATION_CONNECTION.'\'', $this->Link_ID);
         }
 
-      if (!@mysql_select_db($Database,$this->Link_ID)) {
-        $this->connect_failed("cannot use database ".$Database);
+      if (!mysql_select_db($Database,$this->Link_ID)) {
+        $this->Errno  = mysql_errno();
+        $this->Error  = mysql_error();
+          
+        $this->connect_failed("cannot use database ".$Database. ", ". DB_CHARACTER_SET. ", ". DB_COLLATION_CONNECTION. ", ". AA_USE_NON_PERSISTENT_CONNECT);
         return 0;
       }
     }
